--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,5 +2,6 @@ name = "ip-worker"
 main = "src/worker.js"
 compatibility_date = "2023-10-30"
 
-[[routes]]
-pattern = "ip.mordorek.dev/api/*"
+routes = [
+	{ pattern = "ip.mordorek.dev/api/*", zone_name = "mordorek.dev" }
+]
