--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,3 @@
-name = "ip-worker"
+name = "ip-api"
 main = "src/worker.js"
 compatibility_date = "2023-10-30"
-
-routes = [
-	{ pattern = "ip.mordorek.dev/api/*", zone_name = "mordorek.dev" }
-]
