--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,8 @@ compatibility_date = "2023-10-30"
 
 [site]
 bucket = "./public"
+
+[observability]
+[observability.logs]
+enabled = true
+invocation_logs = true
